# bazel-orfs

./: BUILD  Dockerfile  MODULE.bazel  cc.bzl  cheat.sh.tpl  copytree.bzl  docker.BUILD  docker.bzl  docker_shell.sh  openroad.bzl  stringpatch.bzl
.github/scripts/: build_local_target.sh
.github/workflows/: ci.yml
sram/: BUILD
subpackage/: BUILD
