module(
    name = "bazel-orfs",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "patchelf", version = "0.18.0")
bazel_dep(name = "rules_oci", version = "1.7.4")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "orfs_image",
    digest = "sha256:ef18800147f1b09fd00366c32b2266da4944d59d588680ed05d2685fbae2531a",
    image = "ghcr.io/antmicro/openroad-flow-scripts/ubuntu22.04",
    platforms = ["linux/amd64"],
)
use_repo(oci, "orfs_image")

# To have the external PDK examples working uncomment the code below
# and set the `urls` attribute to the archive with external PDK
#bazel_dep(name = "external_pdk", version = "1.0.0")
#archive_override(
#    module_name = "external_pdk",
#    patches = ["//external_pdk:external_pdk.patch"],
#    urls = "",
#)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_docker_download",
    build_file_content = """
export_files(
  ["docker"],
  visibility = ["//visibility:public"],
)
""",
    sha256 = "a9cede81aa3337f310132c2c920dba2edc8d29b7d97065b63ba41cf47ae1ca4f",
    strip_prefix = "docker",
    urls = ["https://download.docker.com/linux/static/stable/x86_64/docker-26.1.4.tgz"],
)

docker_pkg = use_repo_rule("//:docker.bzl", "docker_pkg")

docker_pkg(
    name = "docker_orfs",
    timeout = 3600,
    build_file = ":docker.BUILD",
    docker_file = ":Dockerfile",
    sha256 = "a9cede81aa3337f310132c2c920dba2edc8d29b7d97065b63ba41cf47ae1ca4f",
    strip_prefixes = {
        "OpenROAD-flow-scripts/flow": "flow/",
        "OpenROAD-flow-scripts/tools/install/OpenROAD/bin/": "bin/",
        "OpenROAD-flow-scripts/tools/install/yosys/bin/": "bin/",
        "OpenROAD-flow-scripts/tools/install/yosys/share/": "share/",
        "OpenROAD-flow-scripts/dependencies/lib/": "lib/",
        "usr/lib/x86_64-linux-gnu/": "lib/",
        "usr/lib/klayout/": "lib/klayout",
    },
)
